# modular-happy

./: README.md  cabal.project
backend/: backend.cabal
backend/src/: Backend.hs
frontend/: README.md  frontend.cabal
frontend/src/: Frontend.hs  Grammar.lhs
happy-executable/: happy-executable.cabal
happy-executable/src/: Main.hs
middleend/: middleend.cabal
middleend/src/: Middleend.hs
