cabal-version:       >= 1.10

name:                backend
version:             0.1.0.0
synopsis:            The baseline implementation of happy's backend module (code-gen)

author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

library
  exposed-modules:     Backend
  build-depends:       base >=4.8.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
