cabal-version:       >= 1.10

name:                frontend
version:             0.1.0.0
synopsis:            The baseline implementation of happy's frontend module (.y file parsing, grammar IR gen)

author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

library
  exposed-modules:     Frontend
  build-depends:       base < 5,
                       array,
                       containers >= 0.4.2,
                       text,
                       mtl >= 2.2.1
  hs-source-dirs:      src
  default-language:    Haskell98
  default-extensions: CPP, MagicHash, FlexibleContexts
  ghc-options: -Wall
  other-modules:
        AbsSyn
        GenUtils
        Grammar
        Lexer
        ParseMonad
        Parser
        AttrGrammar
        AttrGrammarParser
        ParamRules
