cabal-version:       >= 1.10

name:                middleend
version:             0.1.0.0
synopsis:            The baseline implementation of happy's middleend module (action & goto table generation)

author:              David Knothe
maintainer:          dknothe314@me.com

build-type:          Simple

library
  exposed-modules:     Middleend
  build-depends:       base >=4.8.2.0
  hs-source-dirs:      src
  default-language:    Haskell98
